objects/CMPL123QMS__Requirement_Item__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123QMS__Requirement_Description__c</fullName>
        <label>Requirement Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Requirement_No__c</fullName>
        <label>Requirement No</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Requirement__c</fullName>
        <label>Requirement</label>
        <referenceTo>CMPL123QMS__Requirement__c</referenceTo>
        <relationshipLabel>Requirement Items</relationshipLabel>
        <relationshipName>Requirement_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Requirement Item</label>
    <nameField>
        <displayFormat>IN-{000000}</displayFormat>
        <label>Item No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requirement Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>